@@ -1,10 +1,45 @@
+#  File src/library/utils/R/unix/create.post.R
+#  Part of the R package, http://www.R-project.org
+#
+#  This program is free software; you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation; either version 2 of the License, or
+#  (at your option) any later version.
+#
+#  This program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#  GNU General Public License for more details.
+#
+#  A copy of the GNU General Public License is available at
+#  http://www.r-project.org/Licenses/
+
+bug.report.info <- function() {
+    paste("R Version:\\n ",
+    paste(names(R.version),R.version, sep=" = ",collapse="\\n "),
+    if (nzchar(Sys.getenv("R_GUI_APP_VERSION")))
+      paste("\\n\\nGUI:\\n R-GUI ",Sys.getenv("R_GUI_APP_VERSION"),
+	    " (",Sys.getenv("R_GUI_APP_REVISION"),")",sep='')
+    else
+      ""
+    ,
+    "\\n\\n",
+    "Locale:\\n",
+    Sys.getlocale(),
+    "\\n\\n",
+    "Search Path:\\n ",
+    paste(search(), collapse=", "),
+    "\\n", sep="", collapse="")
+}
+
 create.post <- function(instructions = "\\n",
                         description = "post",
                         subject = "",
                         ccaddress = Sys.getenv("USER"),
                         method = getOption("mailer"),
                         address ="the relevant mailing list",
-                        file = "R.post")
+                        file = "R.post",
+                        info = NULL)
 {
     methods <- c("mailx", "gnudoit", "none", "ess")
     method <-
@@ -13,21 +48,9 @@ create.post <- function(instructions = "\\n",
 
     body <- paste(instructions,
 		  "--please do not edit the information below--\\n\\n",
-		  "Version:\\n ",
-		  paste(names(R.version),R.version, sep=" = ",collapse="\\n "),
-                  if (nzchar(Sys.getenv("R_GUI_APP_VERSION")))
-                      paste("\\n\\nGUI:\\n R-GUI ",Sys.getenv("R_GUI_APP_VERSION"),
-                            " (",Sys.getenv("R_GUI_APP_REVISION"),")",sep='')
-                  else
-                      ""
-                  ,
-                  "\\n\\n",
-                  "Locale:\\n",
-                  Sys.getlocale(),
-		  "\\n\\n",
-		  "Search Path:\\n ",
-		  paste(search(), collapse=", "),
-		  "\\n", sep="", collapse="")
+		  info,
+		  bug.report.info(),
+		  sep="", collapse="")
 
     if(method == "gnudoit") {
 	cmd <- paste("gnudoit -q '",
