@@ -121,6 +121,13 @@ NEW FEATURES
 	value with zero weight does not force an NaN value.
 
 	There is now a "difftime" method.
+	
+    o	bug.report() now has 'package' and 'lib.loc' arguments to
+	generate bug reports about packages.  When this is used, it
+	looks for a BugReports entry in the package DESCRIPTION file,
+	which will be assumed to be a URL at which to submit the
+	report, and otherwise generates an email to the package
+	maintainer.  (Suggested by Barry Rowlingson.)
 
 
 DEPRECATED & DEFUNCT
